# isal-rs

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md
.github/workflows/: CI.yml  ci.yml
benches/: README.md  igzip.rs
benches/criterion/io__Read Gzip Encoder/alice29.txt/report/: index.html
benches/criterion/io__Read Gzip Encoder/dickens/report/: index.html
benches/criterion/io__Read Gzip Encoder/flate2/alice29.txt/base/: sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/alice29.txt/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/alice29.txt/report/: index.html
benches/criterion/io__Read Gzip Encoder/flate2/dickens/base/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/dickens/new/: benchmark.json  estimates.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/dickens/report/: index.html
benches/criterion/io__Read Gzip Encoder/flate2/html/base/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/html/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/html/report/: index.html
benches/criterion/io__Read Gzip Encoder/flate2/mr/base/: benchmark.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/mr/new/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/mr/report/: index.html
benches/criterion/io__Read Gzip Encoder/flate2/sao/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/sao/new/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/sao/report/: index.html
benches/criterion/io__Read Gzip Encoder/flate2/webster/base/: sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/webster/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/flate2/webster/report/: index.html
benches/criterion/io__Read Gzip Encoder/html/report/: index.html
benches/criterion/io__Read Gzip Encoder/isal/alice29.txt/base/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/alice29.txt/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/alice29.txt/report/: index.html
benches/criterion/io__Read Gzip Encoder/isal/dickens/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/dickens/new/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/dickens/report/: index.html
benches/criterion/io__Read Gzip Encoder/isal/html/base/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/html/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/html/report/: index.html
benches/criterion/io__Read Gzip Encoder/isal/mr/base/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/mr/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/mr/report/: index.html
benches/criterion/io__Read Gzip Encoder/isal/sao/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/isal/sao/new/: estimates.json  sample.json  tukey.json
benches/criterion/io__Read Gzip Encoder/mr/report/: index.html
benches/criterion/io__Read Gzip Encoder/report/: index.html
benches/criterion/io__Read Gzip Encoder/sao/report/: index.html
benches/criterion/io__Read Gzip Encoder/webster/report/: index.html
benches/criterion/io__Write Grzip Encoder/alice29.txt/report/: index.html
benches/criterion/io__Write Grzip Encoder/dickens/report/: index.html
benches/criterion/io__Write Grzip Encoder/html/report/: index.html
benches/criterion/io__Write Grzip Encoder/mr/report/: index.html
benches/criterion/io__Write Grzip Encoder/report/: index.html
benches/criterion/io__Write Grzip Encoder/sao/report/: index.html
benches/criterion/io__Write Grzip Encoder/webster/report/: index.html
benches/criterion/report/: index.html
benches/criterion/roundtrip/alice29.txt/report/: index.html
benches/criterion/roundtrip/dickens/report/: index.html
benches/criterion/roundtrip/html/report/: index.html
benches/criterion/roundtrip/mr/report/: index.html
benches/criterion/roundtrip/report/: index.html
benches/criterion/roundtrip/sao/report/: index.html
benches/criterion/roundtrip/webster/report/: index.html
examples/: compress.rs
isal-rs/: Cargo.toml
isal-rs/benches/: igzip.rs
isal-rs/examples/: compress.rs
isal-rs/src/: error.rs  igzip.rs  lib.rs
isal-sys/: Cargo.toml  build.rs  wrapper.h  zcc
isal-sys/src/: igzip_lib.rs  lib.rs
src/: error.rs  igzip.rs  lib.rs  read.rs  write.rs
src/igzip/: mod.rs  read.rs  write.rs
(+178 files in other folders)
