[package]
name = "isal-rs"
version = "0.4.0+496255c"
edition = "2021"
description = "isa-l Rust bindings"
license = "MIT"
readme = "README.md"

[lib]
name = "isal"

[features]
default = ["static"]
static = ["isal-sys/static"]
shared = ["isal-sys/shared"]
use-system-isal = ["isal-sys/use-system-isal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
isal-sys = { path = "isal-sys", version = "0.4.0+496255c" }

[dev-dependencies]
criterion = "0.3"
md5 = "0.7.0"
flate2 = "^1"

[[bench]]
name = "igzip"
path = "benches/igzip.rs"
harness = false
