[package]
name = "isal-rs"
version = "0.4.0+496255c"
edition = "2021"
description = "isa-l Rust bindings"
readme = "README.md"
license = "MIT AND BSD-3-Clause"
authors = ["Miles Granger <miles59923@gmail.com>"]
documentation = "https://docs.rs/isal-rs"
homepage = "https://github.com/milesgranger/isal-rs"
repository = "https://github.com/milesgranger/isal-rs"
keywords = ["isal", "isa-l", "igzip", "deflate", "zlib"]
exclude = ["benches/"]

[lib]
name = "isal"

[features]
default = ["static"]
static = ["isal-sys/static"]
shared = ["isal-sys/shared"]
use-system-isal = ["isal-sys/use-system-isal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
isal-sys = { path = "isal-sys", version = "0.4.0+496255c" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
md5 = "0.7.0"
flate2 = "^1"
rand = "0.8.5"

[[bench]]
name = "igzip"
path = "benches/igzip.rs"
harness = false

