[package]
name = "isal-rs"
version = "0.1.0+62519d9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
isal-sys = { path = "./../isal-sys" }

[dev-dependencies]
criterion = "0.3"
md5 = "0.7.0"

[[bench]]
name = "igzip"
path = "benches/igzip.rs"
harness = false
