[package]
name = "isal-sys"
version = "0.1.0+62519d9"
edition = "2021"

[features]
default = ["static"]
static = []
shared = []

regenerate-bindings = ["dep:bindgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
bindgen = { version = "^0.69", optional = true }
copy_dir = "0.1.3"


[package.metadata.cross.target.powerpc64le-unknown-linux-gnu]
pre-build = ["apt update && apt install -y llvm-dev libclang-dev clang"]  # required by cbindgen
