[package]
name = "isal-sys"
version = "0.2.0+496255c"
edition = "2021"
description = "isa-l sys crate"
license = "MIT"

[features]
default = ["static"]
static = []
shared = []

regenerate-bindings = ["dep:bindgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
cc = "^1"
bindgen = { version = "^0.69", optional = true }
copy_dir = "0.1.3"


[package.metadata.cross.target.powerpc64le-unknown-linux-gnu]
pre-build = ["apt update && apt install -y llvm-dev libclang-dev clang"]  # required by cbindgen
