[package]
name = "isal-sys"
version = "0.5.3+496255c"
edition = "2021"
description = "isa-l sys crate"
license = "BSD-3-Clause"
authors = ["Miles Granger <miles59923@gmail.com>"]
documentation = "https://docs.rs/isal-rs"
homepage = "https://github.com/milesgranger/isal-rs"
repository = "https://github.com/milesgranger/isal-rs"

[features]
default = ["static"]
static = []
shared = []
use-system-isal = []
regenerate-bindings = ["dep:bindgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
cc = "^1"
bindgen = { version = "^0.69", optional = true }
copy_dir = "0.1.3"
